--- a/ats-style.css
+++ b/ats-style.css
@@ -787,7 +787,7 @@ background: #e0af68;
 	content: "\f2ed"; /* fa-trash-alt */
 }
 .icon-power:before {
-	content: "\f011"; /* fa-power-off */
+	content: "\f0e7"; /* fa-power-off */
 }
 .icon-clipboard:before {
 	content: "\f328"; /* fa-clipboard */
